--- a/lab4/css/style.css
+++ b/lab4/css/style.css
@@ -1,4 +1,3 @@
-/* Контейнер – 2 колонки, 2 рядки */
 .views-view-grid .row {
     display: flex;
     justify-content: center;
@@ -17,7 +16,6 @@
     display: block;
 }
 
-/* Текст поверх фото */
 .views-col h2 {
     position: absolute;
     bottom: 0;
@@ -32,10 +30,9 @@
     font-size: 22px;
     font-weight: bold;
     color: white;
-    background: rgba(0, 0, 90, 0.8); /* темно-синій фон як на сайті */
+    background: rgba(0, 0, 90, 0.8);
 }
 
-/* Тінь як у тебе */
 .shadow_featured {
     position: absolute;
     bottom: 0;
